--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>5 reasons why I shorted the S&P...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Three I’s of Success | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>How gratitude deepens your connection to now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -284,9 +284,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=6q5Zc5uaynI" target="_blank">
-                    <img src="https://i.ytimg.com/vi/6q5Zc5uaynI/mqdefault.jpg" alt="Trading Manually for the First Time in 8 Years!! (+100 Euro)">
+                    <img src="https://i.ytimg.com/vi/6q5Zc5uaynI/mqdefault.jpg" alt="This Zone Recovery Strategy is INSANE (High Probability Trading)">
                     <div class="video-info">
-                        <h3>Trading Manually for the First Time in 8 Years!! (+100 Euro)</h3>
+                        <h3>This Zone Recovery Strategy is INSANE (High Probability Trading)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -376,7 +376,7 @@
                     <div class="video-info">
                         <h3>We Tested Every Month — Here’s When Stocks Perform Best</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,16 +5741,16 @@
                         <div class="video-info">
                             <h3>5 reasons why I shorted the S&P...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=6q5Zc5uaynI" target="_blank">
-                        <img src="https://i.ytimg.com/vi/6q5Zc5uaynI/mqdefault.jpg" alt="Trading Manually for the First Time in 8 Years!! (+100 Euro)">
+                        <img src="https://i.ytimg.com/vi/6q5Zc5uaynI/mqdefault.jpg" alt="This Zone Recovery Strategy is INSANE (High Probability Trading)">
                         <div class="video-info">
-                            <h3>Trading Manually for the First Time in 8 Years!! (+100 Euro)</h3>
+                            <h3>This Zone Recovery Strategy is INSANE (High Probability Trading)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -5774,7 +5774,7 @@
                         <div class="video-info">
                             <h3>We Tested Every Month — Here’s When Stocks Perform Best</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Three I’s of Success | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>How gratitude deepens your connection to now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
